# libhaystack

./: .gitignore  Cargo.toml  LICENSE  README.md  cbindgen.toml
.github/workflows/: master-push.yaml  publish.yaml
benches/: dict.rs  gen_brio_fixture.rs  gen_trio_fixture.rs  main.rs
benches/brio/: points.brio
benches/json/: points.json
benches/trio/: points.trio
fan/: BrioGen.fan
src/: c_api.rs  haystack.rs  lib.rs
src/c_api/: brio.rs  coord.rs  date.rs  datetime.rs  dict.rs  err.rs  filter.rs  grid.rs  json.rs  libhaystack.h  list.rs  mod.rs  number.rs  reference.rs  str.rs  symbol.rs  time.rs  trio.rs  uri.rs  value.rs  xstr.rs  zinc.rs
src/haystack/: defs.rs  filter.rs  mod.rs  timezone.rs  units.rs  util.rs  val.rs
src/haystack/defs/: containment_refs.rs  misc.rs  mod.rs  namespace.rs  reflection.rs
src/haystack/encoding/: brio.rs  decode_ref_dis_factory.rs  mod.rs  trio.rs
src/haystack/encoding/brio/: consts.rs  decode.rs  encode.rs  haxall_fixtures.rs  json_fixture_tests.rs  mod.rs
src/haystack/encoding/json/: decode.rs  encode.rs  mod.rs
src/haystack/encoding/trio/: decode.rs  encode.rs
src/haystack/encoding/zinc/: decode.rs  encode.rs  mod.rs
src/haystack/encoding/zinc/decode/: id.rs  lexer.rs  parser.rs  scalar.rs  scanner.rs  value.rs
src/haystack/encoding/zinc/decode/complex/: dict.rs  grid.rs  list.rs  mod.rs  tag.rs
src/haystack/encoding/zinc/decode/scalar/: coord.rs  date_time.rs  number.rs  reference.rs  str.rs  symbol.rs  uri.rs  xstr.rs
src/haystack/filter/: builder.rs  eval.rs  filtered.rs  lexer.rs  mod.rs  nodes.rs  parser.rs  path.rs  resolver.rs
src/haystack/filter/filtered/: dict.rs  grid.rs  mod.rs
src/haystack/timezone/: iana.rs  mod.rs  utc.rs
src/haystack/units/: mod.rs  unit.rs  unit_dimension.rs  units_generated.rs
src/haystack/units/tools/: mod.rs  parser.rs  units.txt
src/haystack/val/: boolean.rs  coord.rs  date.rs  datetime.rs  dict.rs  dis_macro.rs  grid.rs  kind.rs  list.rs  marker.rs  mod.rs  na.rs  number.rs  reference.rs  remove.rs  string.rs  symbol.rs  time.rs  uri.rs  value.rs  xstr.rs
tests/: test_tag_name.rs  tests.rs
tests/defs/: defs.zinc  mod.rs  namespace.rs  utils.rs
tests/filter/: mod.rs  test_filter_defs.rs  test_haystack_filter.rs  test_haystack_filter_visitor.rs
tests/json/: mod.rs  test_bool.rs  test_coord.rs  test_date.rs  test_datetime.rs  test_dict.rs  test_grid.rs  test_haystack_json_file.rs  test_list.rs  test_marker.rs  test_na.rs  test_number.rs  test_reference.rs  test_remove.rs  test_string.rs  test_symbol.rs  test_time.rs  test_uri.rs  test_value.rs  test_xstr.rs
tests/values/: mod.rs  test_bool.rs  test_coord.rs  test_date.rs  test_datetime.rs  test_dict.rs  test_grid.rs  test_list.rs  test_marker.rs  test_na.rs  test_number.rs  test_reference.rs  test_remove.rs  test_string.rs  test_symbol.rs  test_time.rs  test_uri.rs  test_value.rs  test_xstr.rs
tests/zinc/: mod.rs  test_bool.rs  test_coord.rs  test_date.rs  test_datetime.rs  test_dict.rs  test_grid.rs  test_list.rs  test_marker.rs  test_na.rs  test_number.rs  test_reference.rs  test_remove.rs  test_string.rs  test_symbol.rs  test_time.rs  test_uri.rs  test_value.rs  test_xstr.rs
unit-gen/: Cargo.toml  README.md  units.txt
unit-gen/src/: main.rs  parser.rs  unit_gen.rs
