[package]
name = "libhaystack"
version = "1.0.4"
description = "Rust implementation of the Haystack 4 data types, defs, filter, units, and encodings"
authors = ["J2 Innovations", "Radu Racariu <radur@j2inn.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/j2inn/libhaystack/"
homepage = "https://github.com/j2inn/libhaystack/"
readme = "README.md"
categories = ["command-line-utilities", "data-structures", "encoding", "parser-implementations"]
keywords = ["iot", "bas", "haystack"]

[[bin]]
name = "unit-gen"
path = "src/haystack/units/tools/mod.rs"
required-features = ["unit-gen"]

[lib]
name = "libhaystack"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "main"
harness = false

[features]
# Default enabled features
default = ["encoders", "filter", "timezone", "units", "c-api"]

# C API Features
c-api = ["c-api-filter", "c-api-json","c-api-zinc"]
c-api-filter = ["filter"]
c-api-zinc = ["zinc"]
c-api-json = ["json"]

# Lib features
filter = ["defs",  "zinc-decoding"]
defs = []
units = []
timezone = []
encoders = ["json", "zinc"]
json = ["json-encoding", "json-decoding"]
json-encoding = []
json-decoding = []
zinc = ["zinc-encoding", "zinc-decoding"]
zinc-encoding = []
zinc-decoding = []

# Util features
unit-gen = ["pom"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
uuid = { version = "1.1", features = ["v4"] }
chrono = "0.4"
chrono-tz = "0.6.1"
lazy_static = "1.4.0"
dashmap = "5.3.4"
pom  = {version = "3.2.0", optional = true }

[dev-dependencies]
criterion = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.8"
uuid = { version = "1.1", features = ["v4", "js"] }
wee_alloc = "0.4.5"
web-sys = { version = "0.3", features = [ "console"]}
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = 3
lto = true