[package]
name = "libhaystack"
version = "1.0.13"
description = "Rust implementation of the Haystack 4 data types, defs, filter, units, and encodings"
authors = ["J2 Innovations", "Radu Racariu <radur@j2inn.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/j2inn/libhaystack/"
homepage = "https://github.com/j2inn/libhaystack/"
readme = "README.md"
categories = [
	"command-line-utilities",
	"data-structures",
	"encoding",
	"parser-implementations",
]
keywords = ["iot", "bas", "haystack"]

[lib]
name = "libhaystack"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "main"
harness = false

[workspace]
members = ["unit-gen"]


[features]
# Default enabled features
default = ["encoders", "filter", "timezone", "units", "c-api"]

# C API Features
c-api = ["c-api-filter", "c-api-json", "c-api-zinc"]
c-api-filter = ["filter"]
c-api-zinc = ["zinc"]
c-api-json = ["json"]

# Lib features
value = ["units", "timezone", "encoders"]
filter = ["value", "defs", "zinc-decoding"]
defs = ["value"]
units = ["units-db"]
units-db = []
timezone = ["timezone-db"]
timezone-db = []
encoders = ["value", "json", "zinc"]
json = ["json-encoding", "json-decoding"]
json-encoding = []
json-decoding = []
zinc = ["zinc-encoding", "zinc-decoding"]
zinc-encoding = []
zinc-decoding = []

[dependencies]
serde = "1.0"
serde_json = "1.0"
uuid = { version = "1.1", features = ["v4"] }
chrono = "0.4"
chrono-tz = "0.6"
lazy_static = "1.4"
dashmap = "5.4"
regex = "1.10.3"

[dev-dependencies]
criterion = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
uuid = { version = "1.1", features = ["v4", "js"] }
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.7"
