[package]
name = "libhaystack"
version = "3.1.1"
description = "Rust implementation of the Haystack 4 data types, defs, filter, units, and encodings"
authors = ["J2 Innovations", "Radu Racariu <radur@j2inn.com>"]
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/j2inn/libhaystack/"
homepage = "https://github.com/j2inn/libhaystack/"
readme = "README.md"
categories = [
	"command-line-utilities",
	"data-structures",
	"encoding",
	"parser-implementations",
]
keywords = ["iot", "bas", "haystack"]

[lib]
name = "libhaystack"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "main"
harness = false

[[bench]]
name = "dict"
harness = false

[[bench]]
name = "gen_trio_fixture"
harness = false

[workspace]
members = ["unit-gen"]


[features]
# Default enabled features
default = ["encoders", "filter", "timezone", "units", "units-db", "c-api"]

# C API Features
c-api = ["c-api-filter", "c-api-json", "c-api-zinc", "c-api-brio", "c-api-trio"]
c-api-filter = ["filter"]
c-api-zinc = ["zinc"]
c-api-json = ["json"]
c-api-brio = ["brio"]
c-api-trio = ["trio"]

# Lib features
value = ["units", "timezone", "encoders"]
filter = ["value", "defs", "zinc-decoding"]
defs = ["value"]
units = []
units-db = []
timezone = ["timezone-db"]
timezone-db = []
encoders = ["value", "json", "zinc", "brio", "trio"]
json = ["json-encoding", "json-decoding"]
json-encoding = []
json-decoding = []
zinc = ["zinc-encoding", "zinc-decoding"]
zinc-encoding = []
zinc-decoding = []
brio = ["brio-encoding", "brio-decoding"]
brio-encoding = []
brio-decoding = []
trio = ["trio-encoding", "trio-decoding"]
trio-encoding = ["zinc-encoding"]
trio-decoding = ["zinc-decoding"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
uuid = { version = "1.2", features = ["v4"] }
chrono = "0.4"
chrono-tz = "0.10"
regex = "1.12"
dashmap = "6.1"

[dev-dependencies]
criterion = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
uuid = { version = "1.2", features = ["v4", "js"] }
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
